Arreglado el documento de clase

--- a/4 GII/2do Semestre/PINF/Clase/Clase 3 de abril/Resumen del proyecto.tex
+++ b/4 GII/2do Semestre/PINF/Clase/Clase 3 de abril/Resumen del proyecto.tex
@@ -184,14 +184,11 @@ El proyecto tendrá una duración de tres meses y se realizarán reuniones seman
 \subsection{Organización}
 \subsubsection{Roles}
 \begin{itemize}
-	\item \textbf{Scrum master:} Luis Gutiérrez Flores.
-	\item \textbf{Administrador de sistemas:} Alejandro José Caraballo García.
-	\item \textbf{Producto owner:} Jesús Rodríguez Heras.
-	\item \textbf{Analista:} Nicolás Ruiz Requejo.
-	\item \textbf{Arquitecto Software:} Arantzazu Otal Alberro.
-	\item \textbf{Desarrollador:} Todos.
-	\item \textbf{Diseñador de interfaz de usuario:} Alejandro Segovia Gallardo.
-	\item \textbf{Tester:} Gabriel Fernando Sánchez Reina.
+	\item \textbf{Administrador:} Luis Gutiérrez Flores.
+	\item \textbf{Analistas:} Jesús Rodríguez Heras y Nicolás Ruiz Requejo.
+	\item \textbf{Diseñadores:} Arantzazu Otal Alberro, Gabriel Fernando Sánchez Reina y Nicolás Ruiz Requejo.
+	\item \textbf{Desarrolladores:} Luis Gutiérrez Flores, Alejandro Segovia Gallardo y Alejandro José Caraballo García.
+	\item \textbf{Ingenieros de pruebas:} Jesús Rodríguez Heras y Luis Gutiérrez Flores.
 \end{itemize}
 
 \subsubsection{Recursos hardware y sofware}
