Añadido el documento de plan de proyecto a la documentación (tanto inglés como español) de fantasy

--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/CasosUso.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/CasosUso.tex
@@ -803,54 +803,54 @@ Todos los casos de uso descritos a continuación, tienen la siguiente precondici
 \end{itemize}
 
 
-\section{Gestionar porcentaje de un punto activo}
-\begin{itemize}
-	\item \textbf{Descripción:}
-	\item \textbf{Actores:}
-	\item \textbf{Precondiciones:}
-	\item \textbf{Postcondiciones:}
-	\item \textbf{Escenario principal:}
-	\item \textbf{Extensiones:}
-	\item \textbf{Variaciones:}
-	\item \textbf{No-funcional:}
-	\item \textbf{Cuestiones:}
-\end{itemize}
-
-\section{Gestionar ficha alumno}
-\begin{itemize}
-	\item \textbf{Descripción:}
-	\item \textbf{Actores:}
-	\item \textbf{Precondiciones:}
-	\item \textbf{Postcondiciones:}
-	\item \textbf{Escenario principal:}
-	\item \textbf{Extensiones:}
-	\item \textbf{Variaciones:}
-	\item \textbf{No-funcional:}
-	\item \textbf{Cuestiones:}
-\end{itemize}
-
-\section{Asignar nota final}
-\begin{itemize}
-	\item \textbf{Descripción:}
-	\item \textbf{Actores:}
-	\item \textbf{Precondiciones:}
-	\item \textbf{Postcondiciones:}
-	\item \textbf{Escenario principal:}
-	\item \textbf{Extensiones:}
-	\item \textbf{Variaciones:}
-	\item \textbf{No-funcional:}
-	\item \textbf{Cuestiones:}
-\end{itemize}
-
-\section{Asignar fantasía}
-\begin{itemize}
-	\item \textbf{Descripción:}
-	\item \textbf{Actores:}
-	\item \textbf{Precondiciones:}
-	\item \textbf{Postcondiciones:}
-	\item \textbf{Escenario principal:}
-	\item \textbf{Extensiones:}
-	\item \textbf{Variaciones:}
-	\item \textbf{No-funcional:}
-	\item \textbf{Cuestiones:}
-\end{itemize}
+%\section{Gestionar porcentaje de un punto activo}
+%\begin{itemize}
+%	\item \textbf{Descripción:}
+%	\item \textbf{Actores:}
+%	\item \textbf{Precondiciones:}
+%	\item \textbf{Postcondiciones:}
+%	\item \textbf{Escenario principal:}
+%	\item \textbf{Extensiones:}
+%	\item \textbf{Variaciones:}
+%	\item \textbf{No-funcional:}
+%	\item \textbf{Cuestiones:}
+%\end{itemize}
+%
+%\section{Gestionar ficha alumno}
+%\begin{itemize}
+%	\item \textbf{Descripción:}
+%	\item \textbf{Actores:}
+%	\item \textbf{Precondiciones:}
+%	\item \textbf{Postcondiciones:}
+%	\item \textbf{Escenario principal:}
+%	\item \textbf{Extensiones:}
+%	\item \textbf{Variaciones:}
+%	\item \textbf{No-funcional:}
+%	\item \textbf{Cuestiones:}
+%\end{itemize}
+%
+%\section{Asignar nota final}
+%\begin{itemize}
+%	\item \textbf{Descripción:}
+%	\item \textbf{Actores:}
+%	\item \textbf{Precondiciones:}
+%	\item \textbf{Postcondiciones:}
+%	\item \textbf{Escenario principal:}
+%	\item \textbf{Extensiones:}
+%	\item \textbf{Variaciones:}
+%	\item \textbf{No-funcional:}
+%	\item \textbf{Cuestiones:}
+%\end{itemize}
+%
+%\section{Asignar fantasía}
+%\begin{itemize}
+%	\item \textbf{Descripción:}
+%	\item \textbf{Actores:}
+%	\item \textbf{Precondiciones:}
+%	\item \textbf{Postcondiciones:}
+%	\item \textbf{Escenario principal:}
+%	\item \textbf{Extensiones:}
+%	\item \textbf{Variaciones:}
+%	\item \textbf{No-funcional:}
+%	\item \textbf{Cuestiones:}
+%\end{itemize}
