--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Fantasy.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Fantasy.tex
@@ -131,9 +131,10 @@
 	\tableofcontents
 	\newpage
 	
+	\include{Introduccion}
+	\include{PlanProyecto}
 	\include{AnalisisRequisitos}
 	\include{CasosUso}
-%	\include{Doc3}
 %	\include{Doc4}
 %	\include{Doc5}
 %	\include{Doc6}
