--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Fantasy.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Fantasy.tex
@@ -116,6 +116,8 @@
 	\tableofcontents
 	\newpage
 	
+	\include{Introduction}
+	\include{ProyectPlan}
 	\include{RequirementsAnalisys}
 	\include{UseCase}
 	
