Arreglado el diagrama de Gantt

--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/PlanProyecto.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/PlanProyecto.tex
@@ -10,7 +10,7 @@ La metodología usada será \textbf{Scrum}: Método de desarrollo ágil caracter
 El proyecto tendrá una duración de tres meses y se realizarán reuniones semanales con el cliente de una hora de duración como máximo.
 \begin{figure}[h]
 	\centering
-	\includegraphics[scale=0.85]{Gantt.pdf}
+	\includegraphics[scale=0.42]{Gantt.png}
 	\caption{Diagrama de Gantt}
 	\label{Diagrama de Gantt}
 \end{figure}
@@ -104,32 +104,32 @@ El equipo ha decidido hacer reuniones con una periodicidad de una semana con el 
 	\item Distribución de las tareas del sprint 0.
 \end{enumerate}
 
-\subsection{Reunión 2 (6 de marzo)}
+\subsection{Reunión 1 (6 de marzo)}
 \begin{enumerate}
 	\item Finalización del sprint 0.
 	\item Distribución de la información a buscar.
 	\item Comienzo del sprint 1.
 \end{enumerate}
 
-\subsection{Reunión 3 (27 de marzo)}
+\subsection{Reunión 2 (27 de marzo)}
 \begin{enumerate}
 	\item Finalización del sprint 1.
 	\item Comienzo del sprint 2.
 \end{enumerate}
 
-\subsection{Reunión 4 (3 de abril)}
+\subsection{Reunión 3 (3 de abril)}
 \begin{enumerate}
 	\item Finalización del sprint 2.
 	\item Comienzo del sprint 3.
 \end{enumerate}
 
-\subsection{Reunión 5 (10 de abril)}
+\subsection{Reunión 4 (10 de abril)}
 \begin{enumerate}
 	\item Finalización del sprint 3.
 	\item Comienzo del sprint 4.
 \end{enumerate}
 
-\subsection{Reunión 6 (24 de abril)}
+\subsection{Reunión 5 (24 de abril)}
 \begin{enumerate}
 	\item Finalización del sprint 4.
 	\item Comienzo del sprint 5.
