--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/ProyectPlan.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/ProyectPlan.tex
@@ -10,7 +10,7 @@ The methodology used will be \ textbf {Scrum}: Agile development method characte
 The project will last for three months and weekly meetings with the client will be held for a maximum of one hour.
 \begin{figure}[h]
 	\centering
-	\includegraphics[scale=0.85]{Gantt.pdf}
+	\includegraphics[scale=0.42]{Gantt.png}
 	\caption{Gantt diagram}
 	\label{Gantt diagram}
 \end{figure}
@@ -104,32 +104,32 @@ The team has decided to hold weekly meetings with the client, throughout the wee
 	\item Distribution of sprint tasks 0.
 \end{enumerate}
 
-\subsection{Meeting 2 ($6^{th}$ March)}
+\subsection{Meeting 1 ($6^{th}$ March)}
 \begin{enumerate}
 	\item End of sprint 0.
 	\item Distribution of information to search.
 	\item Start of sprint 1.
 \end{enumerate}
 
-\subsection{Meeting 3 ($27^{th}$ March)}
+\subsection{Meeting 2 ($27^{th}$ March)}
 \begin{enumerate}
 	\item End of sprint 1.
 	\item Start of sprint 2.
 \end{enumerate}
 
-\subsection{Meeting 4 ($3^{rd}$ April)}
+\subsection{Meeting 3 ($3^{rd}$ April)}
 \begin{enumerate}
 	\item End of sprint 2.
 	\item Start of sprint 3.
 \end{enumerate}
 
-\subsection{Meeting 5 ($10^{th}$ April)}
+\subsection{Meeting 4 ($10^{th}$ April)}
 \begin{enumerate}
 	\item End of sprint 3.
 	\item Start of sprint 4.
 \end{enumerate}
 
-\subsection{Meeting 6 ($24^{th}$ April)}
+\subsection{Meeting 5 ($24^{th}$ April)}
 \begin{enumerate}
 	\item End of sprint 4.
 	\item Start of sprint 5.
