Añadidas las modificaciones de como tiene que quedar la documentación del proyecto

--- a/4 GII/2do Semestre/PINF/Plantilla TFG/Desarrollo/CasosUso.tex
+++ b/4 GII/2do Semestre/PINF/Plantilla TFG/Desarrollo/CasosUso.tex
@@ -1,6 +1,8 @@
 \chapter{Diseño del sistema}
 
-\textcolor{red}{PARA SEGUIR EL DOCUMENTO DE CARLOS, PODEMOS DECIR QUE, SI LA ARQUITECTURA DE DISEÑO SON LOS CASOS DE USO, Y LA ARQUITECTURA LÓGICA SON LAS TABLAS DE LA BASE DE DATOS, PODEMOS DEJAR LO QUE  HAY AQUÍ DE CASOS DE USO TAL Y COMO ESTÁ Y, SIMPLEMENTE, AÑADIR EL DIAGRAMA DE LA BASE DE DATOS.}
+\textcolor{red}{PARA SEGUIR EL DOCUMENTO DE CARLOS, PODEMOS DECIR QUE, SI LA ARQUITECTURA DE DISEÑO SON LOS CASOS DE USO, Y LA ARQUITECTURA LÓGICA SON LAS TABLAS DE LA BASE DE DATOS, PODEMOS DEJAR LO QUE  HAY AQUÍ DE CASOS DE USO TAL Y COMO ESTÁ Y, SIMPLEMENTE, AÑADIR EL DIAGRAMA DE LA BASE DE DATOS.\\AÑADIR SUB A TODAS LAS SUBSECCIONES PARA PONERLAS COMO SUBSUBSECCIONES PARA QUE SALGAN EN ROSITA Y QUEDE MEJOR}
+
+\section{Casos de uso}
 
 En el diseño del sistema se han propuesto una serie de casos de uso que tienen la siguiente precondición implícita para poder usar dichos casos de uso en la aplicación final:
 \begin{itemize}
@@ -9,9 +11,9 @@ En el diseño del sistema se han propuesto una serie de casos de uso que tienen 
 
 Los casos de uso propuestos son los siguientes:
 
-\section{CRUD fantasía}
+\subsection{CRUD fantasía}
 \hypertarget{crearfantasia}{}
-\subsection{Crear fantasía}
+\subsubsection{Caso de uso: Crear fantasía}
 \begin{itemize}
 	\item \textbf{Descripción:} Crea una nueva fantasía.
 	\item \textbf{Actores:} Creador-editor (usuario).
